# Bad-Chef

./: .gitignore  Documents.code-workspace  README.md  package-lock.json  package.json  pyproject.toml  recipes.db  summary.txt
app/: .env  auth.py  database.py  main.py  main2.py  models.py  ratings.py  recipes.db  users.py
app/data/: frenchcookingacademy.json  recipeData.json
app/routers/: favorites.py  ratings.py  recipes.py  recommendations.py  users.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Favorites.css  Favorites.tsx  Login.tsx  RecipeDetail.css  RecipeDetail.tsx  Recipes.css  Recipes.tsx  index.css  main.tsx  types.ts
frontend/src/components/: RecipeCard.css  RecipeCard.tsx  ScrollableRecipeList.css  ScrollableRecipeList.tsx  ScrollableRecipeListFavs.tsx  SearchField.css  SearchField.tsx
frontend/src/utils/: auth.ts
recipe_scraper/: pyproject.toml  recipeData.json  recipe_scraper.py  scraper.py  scraper_test.py  test.json
tests/: conftest.py  test_main.py  test_utils.py
