[project]
name = "recipe-platform"
version = "0.1.0"
description = "Community recipe sharing platform for Food Good"
authors = [
    {name = "James Liu (liujame@oregonstate.edu)"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
