[project]
name = "recipe-platform"
version = "0.1.0"
description = "Community recipe sharing platform for Food Good"
authors = [
    {name = "James Liu (liujame@oregonstate.edu)"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "bcrypt (==4.0.1)",
    "fastapi[all] (>=0.115.11,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "recipe-platform"
version = "0.1.0"
description = "A recipe platform API"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
ruff = "^0.11.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"  # Matches your current mode
asyncio_default_fixture_loop_scope = "function"  # Explicitly set
filterwarnings = [
    "ignore:(trapped) error reading bcrypt version:UserWarning:passlib.handlers.bcrypt",
]